--- a/Library_App/appsettings.json
+++ b/Library_App/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultConnection": "Data Source=SQL6031.site4now.net;Initial Catalog=db_a9e64c_libraryapp;User Id=db_a9e64c_libraryapp_admin;Password=Fatih5807."
+    "defaultConnection": "Server=localhost; Database=library_app_db; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=true"
   },
   "JWTConfig": {
     "key": "library_app_fatih_yelboga_osman_altunay",
